<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fighter_corner_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue_corner"
        android:textColor="@color/blue_corner"
        android:background="@color/blue_corner_bg"
        android:layout_margin="@dimen/margin_title"
        android:gravity="center"/>

    <TextView
        android:id="@+id/fighter_name_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Dan Henderson"
        android:background="@color/fighter_bg"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_title"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/total_strikes_score_blue"
                style="@style/ufc_score"/>

            <Button
                style="@style/ufc_button"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/total_strikes_blue"
                android:onClick="onClickTotalStrikesBlue"
                android:layout_toStartOf="@id/total_strikes_score_blue"
                android:text="@string/total_strikes"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <TextView
                android:id="@+id/significant_strikes_score_blue"
                style="@style/ufc_score"/>

            <Button
                style="@style/ufc_button"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/significant_strikes_blue"
                android:onClick="onClickSignificantStrikesBlue"
                android:layout_toStartOf="@id/significant_strikes_score_blue"
                android:text="@string/significant_strikes"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/knockdowns_score_blue"
                style="@style/ufc_score"/>

            <Button
                style="@style/ufc_button"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/knockdowns_blue"
                android:onClick="onClickKnockdownsBlue"
                android:text="@string/knockdowns"
                android:layout_toStartOf="@id/knockdowns_score_blue"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/takedowns_score_blue"
                style="@style/ufc_score"/>

            <Button
                style="@style/ufc_button"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/takedowns_blue"
                android:onClick="onClickTakedownsBlue"
                android:layout_toStartOf="@id/takedowns_score_blue"
                android:text="@string/takedowns"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/submissions_attempts_score_blue"
                style="@style/ufc_score"/>

            <Button
                style="@style/ufc_button"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/submissions_attempts_blue"
                android:onClick="onClickSubmissionsAttemptsBlue"
                android:layout_toStartOf="@id/submissions_attempts_score_blue"
                android:text="@string/submission_attempts"/>


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>